appId: com.tokenmetrics.app
---
- tapOn: "Stable Vault"
- inputText:
    text: "100"
- tapOn: "Deposit"
- assertVisible: "Deposit Successful"
